# ioctl

./: .gitignore  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp
run/: multi_camera_capture  out.py
run/data/: camera_1_1728265039.yuyv  camera_2_1728265039.yuyv  camera_3_1728265039.yuyv
